modified to list method